Modificación htmnl, incorporación estilos con CSS

--- a/contact.html
+++ b/contact.html
@@ -4,29 +4,44 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/assets/img/CSS/style.css">
     <title>Contact</title>
 </head>
 <body>
 
+    <h1>Mighty Ducks Hockey League</h1>
+
     <header>
-        <div>
-            <img src="./assets/img/Logo_Mighty_ducks-01.png" alt="Logo Mighty Ducks" width="100">
-        </div>
-        <h1>Mighty Ducks Hockey League</h1>
         <nav>
-            <a href="./index.html">Home</a> | <a href="./about.html">About MDHL</a> | <a href="#">Contact</a>
+            <div>
+                <a class="boton1" href="./index.html">Home</a>  <a class="boton2" href="./about.html">About MDHL</a>  <a class="boton3" href="#">Contact</a>
+            </div>
         </nav>
     </header>
 
-    <main>
-        <div>
-            <img src="./assets/img/hockey-3.jpg" alt="Two Ducks Players" width="100">
-        </div>
+    <div class="titulo">
+        <h2>Contact</h2>
+    </div>
 
-        <p>Please email us at <a href="#">mdhl@chihockey.org</a></p>
+<div class="principal">
 
-        <p>We reply to your email as soon as we can.</p>
+        <img src="./assets/img/Logo_Mighty_ducks-01.png" alt="Logo Mighty Ducks" width="100px">  
+
+    <main class="container">
+
+        <section>
+            <article>
+                <p>Please email us at <a href="#">mdhl@chihockey.org</a></p>
+            </article>
+            <article>
+                <p>We reply to your email as soon as we can.</p>
+            </article>            
+        </section>
+
     </main>
     
+</div>
+
 </body>
 </html>
