--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="/assets/img/CSS/style.css">
+    <link rel="stylesheet" href="./assets/img/CSS/style.css">
     <title>Contact</title>
 </head>
 <body>
