Creación página Rules

--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
     <header>
         <nav>
             <div>
-                <a class="boton1" href="./index.html">Home</a>  <a class="boton2" href="#">About MDHL</a>  <a class="boton3" href="./contact.html">Contact</a>
+                <a class="boton1" href="./index.html">Home</a>  <a class="boton2" href="#">About MDHL</a>  <a class="boton3" href="./contact.html">Contact</a> <a class="boton4" href="./rules.html">Rules</a>
             </div>
         </nav>
     </header>
