modificación CSS TASK-03

--- a/rules.html
+++ b/rules.html
@@ -17,9 +17,56 @@
         </nav>
     </header>
 
-    <div class="titulo">
-        <h2>Rules</h2>
+    <div >
+        <h2 class="titulo">Rules</h2>
     </div>
     
+    <h3 class="titulo-rules-h3">Mighty Ducks Hockey League</h3>
+    <h2 class="titulo-rules-h2">RULES OF PLAY & POLICIES</h2>
+
+    <div class="nuevo">
+        <ul>
+            <li>gfhgf</li>
+            <li>gfhgfh</li>
+            <li>gfhdfh</li>
+            <li>gfhdf</li>
+            <li>gfhdfh</li>
+        </ul>
+        <br>    
+        <ol>
+            <li>gfhgf</li>
+            <li>gfhgfh</li>
+            <li>gfhdfh</li>
+            <li>gfhdf</li>
+            <li>gfhdfh</li>
+        </ol>
+        <br>
+        <dl>
+            <dt><b>SPORTSMANSHIP</b></dt>
+            <dd>
+                The common interest that members of the Association share is to inspire
+youth to practice the ideals of sportsmanship and fair play. Any player, coach,
+team, parent, spectator, administrator or referee whose behavior detracts from
+this purpose is subject to disciplinary action regardless of technical hockey
+background, expertise, accomplishments or standing.
+            </dd>
+        </dl>
+    </div>
+
+</div>
+    
+
+<dl>
+    <dt><b>SPORTSMANSHIP</b></dt>
+    <dd>
+        The common interest that members of the Association share is to inspire
+youth to practice the ideals of sportsmanship and fair play. Any player, coach,
+team, parent, spectator, administrator or referee whose behavior detracts from
+this purpose is subject to disciplinary action regardless of technical hockey
+background, expertise, accomplishments or standing.
+    </dd>
+</dl>
+
+
 </body>
 </html>
