--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
     <header>
         <nav>
             <div>
-                <a class="boton1" href="./index.html">Home</a>  <a class="boton2" href="./about.html">About MDHL</a>  <a class="boton3" href="#">Contact</a> <a class="boton4" href="./rules.html">Rules</a>
+                <a class="boton1" href="./index.html">Home</a>  <a class="boton2" href="./about.html">About MDHL</a> <a class="boton2" href="./game.html">Games</a>  <a class="boton3" href="#">Contact</a> <a class="boton4" href="./rules.html">Rules</a>
             </div>
         </nav>
     </header>
