--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="./assets/CSS/style.css">
     <title>Contact</title>
 </head>
@@ -15,7 +14,7 @@
     <header>
         <nav>
             <div>
-                <a class="boton1" href="./index.html">Home</a>  <a class="boton2" href="./about.html">About MDHL</a> <a class="boton2" href="./game.html">Games</a>  <a class="boton3" href="#">Contact</a> <a class="boton4" href="./rules.html">Rules</a>
+                <a class="boton1" href="./index.html">Home</a>  <a class="boton2" href="./about.html">About MDHL</a> <a class="boton2" href="./game.html">Games</a> <a class="boton2" href="./form.html">Form</a> <a class="boton3" href="#">Contact</a> <a class="boton4" href="./rules.html">Rules</a>
             </div>
         </nav>
     </header>
