Culmina formulario task 04, complementa con nuevos estilos

--- a/contact.html
+++ b/contact.html
@@ -21,6 +21,7 @@
 
     <div class="titulo">
         <h2>Contact</h2>
+        <h1>Mighty Ducks Hockey League</h1>
     </div>
 
 <div class="principal">
