--- a/game.html
+++ b/game.html
@@ -17,8 +17,9 @@
         </nav>
     </header>
 
-    <div >
-        <h2 class="titulo">Games</h2>
+    <div class="titulo">
+        <h2>Games</h2>
+        <h1>Mighty Ducks Hockey League</h1>
     </div>
     
     <div class="container-titulo-1">
