--- a/index.html
+++ b/index.html
@@ -19,9 +19,11 @@
 
     <div class="titulo">
         <h2>Upcoming Events</h2>
+        <h1>Mighty Ducks Hockey League</h1>
     </div>
 
     <div class="principal">
+        
 
 
         <img src="./assets/img/Logo_Mighty_ducks-01.png" alt="Logo Mighty Ducks" width="100px">  
