modificación estilos CSS y correción errores del validador

--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
 
     <div class="principal">
 
-        <img src="./assets/img/Logo_Mighty_ducks-01.png" alt="Logo Mighty Ducks" width="100px">  
+        <img src="./assets/img/Logo_Mighty_ducks-01.png" alt="Logo Mighty Ducks">  
 
         
             
