--- a/form.html
+++ b/form.html
@@ -2,10 +2,10 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="./assets/CSS/style.css" />
+  <meta charset="UTF-8" >
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" >
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" >
+  <link rel="stylesheet" href="./assets/CSS/style.css" >
   <link rel="shortcut icon" href="./assets/img/Logo_Mighty_ducks-01.png" type="image/x-icon">
 
 
@@ -31,64 +31,64 @@
     <form action="./show_data.html">
       <div>
         <label for="first-name">Player's First Name:</label>
-        <input type="text" id="first-name" name="first-name" required />
+        <input type="text" id="first-name" name="first-name" required>
 
         <label for="last-name">Last Name:</label>
-        <input type="text" id="last-name" name="last-name" required />
+        <input type="text" id="last-name" name="last-name" required>
       </div>
 
       <div class="street-container">
         <label for="street-address">Street Address:</label>
-        <input type="text" id="street-address" name="street-address" required />
+        <input type="text" id="street-address" name="street-address" required>
       </div>
 
       <div class="citycode-container">
         <div>
           <label for="city">City:</label>
-          <input type="text" id="city" name="city" required />
+          <input type="text" id="city" name="city" required>
         </div>
 
         <div>
           <label for="zip-code">Zip Code:</label>
-          <input type="text" id="zip-code" name="zip-code" required />
+          <input type="text" id="zip-code" name="zip-code" required>
         </div>
       </div>
 
       <div class="gender-container">
         <div class="birth">
           <label for="birth-date">Birth Date:</label>
-          <input type="date" id="birth-date" name="birth-date" required />
+          <input type="date" id="birth-date" name="birth-date" required>
         </div>
 
         <div class="gender">
-          <label for="gender">Gender:</label>
+          <label>Gender:</label>
 
-          <input type="checkbox" id="female" name="gender" value="female" />
+          <input type="checkbox" id="female" name="gender" value="female">
           <label for="female">Female</label>
 
-          <input type="checkbox" id="male" name="gender" value="male" />
+          <input type="checkbox" id="male" name="gender" value="male">
           <label for="male">Male</label>
         </div>
       </div>
 
       <div class="grade-container">
         <label for="grade">Grade:</label>
-        <input type="checkbox" id="grade" name="grade" value="grade" />
+        <input type="checkbox" id="grade" name="grade" value="grade">
 
         <label for="grade" class="preSchool">Pre-School</label>
-        <input type="checkbox" id="1st" name="1st" value="1st" />
+        <input type="checkbox" id="1st" name="1st" value="1st">
         <label for="1st"><span class="small-letter">1st</span></label>
 
-        <input type="checkbox" id="2nd" name="2nd" value="2nd" />
+        <input type="checkbox" id="2nd" name="2nd" value="2nd">
         <label for="2nd"><span class="small-letter">2nd</span></label>
 
-        <input type="checkbox" id="3rd" name="3rd" value="3rd" />
+        <input type="checkbox" id="3rd" name="3rd" value="3rd">
         <label for="3rd"><span class="small-letter">3rd</span></label>
 
-        <input type="checkbox" id="4th" name="4th" value="4th" />
+        <input type="checkbox" id="4th" name="4th" value="4th">
         <label for="4th"><span class="small-letter">4th</span></label>
 
-        <input type="checkbox" id="5th" name="5th" value="5th" />
+        <input type="checkbox" id="5th" name="5th" value="5th">
         <label for="5th"><span class="small-letter">5th</span></label>
       </div>
 
@@ -99,32 +99,32 @@
       <div class="checkbox-container">
         <div class="column">
           <div>
-            <input type="checkbox" id="Katzenmaier" name="Katzenmaier" value="Katzenmaier" />
+            <input type="checkbox" id="Katzenmaier" name="Katzenmaier" value="Katzenmaier">
             <label for="Katzenmaier"><span class="checkbox-text">AJ Katzenmaier</span></label>
           </div>
 
           <div>
-            <input type="checkbox" id="Greenbay" name="Greenbay" value="Greenbay" />
+            <input type="checkbox" id="Greenbay" name="Greenbay" value="Greenbay">
             <label for="Greenbay"><span class="checkbox-text">Greenbay</span></label>
           </div>
 
           <div>
-            <input type="checkbox" id="Howard" name="Howard" value="Howard" />
+            <input type="checkbox" id="Howard" name="Howard" value="Howard">
             <label for="Howard"><span class="checkbox-text">Howard A Yeager</span></label>
           </div>
         </div>
 
         <div class="column">
           <div>
-            <input type="checkbox" id="Marjorie" name="Marjorie" value="Marjorie" />
+            <input type="checkbox" id="Marjorie" name="Marjorie" value="Marjorie">
             <label for="Marjorie"><span class="checkbox-text">Marjorie P Hart</span></label>
           </div>
           <div>
-            <input type="checkbox" id="North" name="North" value="North" />
+            <input type="checkbox" id="North" name="North" value="North">
             <label for="North"><span class="checkbox-text">North Elemnentary</span></label>
           </div>
           <div>
-            <input type="checkbox" id="South" name="South" value="South" />
+            <input type="checkbox" id="South" name="South" value="South">
             <label for="South"><span class="checkbox-text">South Elementary</span></label>
           </div>
         </div>
@@ -136,23 +136,23 @@
       <div class="checkbox-container">
         <div class="column">
           <div>
-            <input type="checkbox" id="Forward" name="Forward" value="Forward" />
+            <input type="checkbox" id="Forward" name="Forward" value="Forward">
             <label for="Forward"><span class="checkbox-text">Forward</span></label>
           </div>
 
           <div>
-            <input type="checkbox" id="Defense" name="Defense" value="Defense" />
+            <input type="checkbox" id="Defense" name="Defense" value="Defense">
             <label for="Defense"><span class="checkbox-text">Defense</span></label>
           </div>
         </div>
 
         <div class="column">
           <div>
-            <input type="checkbox" id="Midfield" name="Midfield" value="Midfield" />
+            <input type="checkbox" id="Midfield" name="Midfield" value="Midfield">
             <label for="Midfield"><span class="checkbox-text">Midfield</span></label>
           </div>
           <div>
-            <input type="checkbox" id="Goalkeeper" name="Goalkeeper" value="Goalkeeper" />
+            <input type="checkbox" id="Goalkeeper" name="Goalkeeper" value="Goalkeeper">
             <label for="Goalkeeper"><span class="checkbox-text">Goalkeeper</span></label>
           </div>
         </div>
@@ -163,36 +163,36 @@
       <div class="checkbox-container">
         <div class="column">
           <div>
-            <input type="checkbox" id="Small" name="Small" value="SmallY" />
-            <label for="Small"><span class="checkbox-text">Youth Small</span></label>
+            <input type="checkbox" id="SmallY" name="Small" value="SmallY">
+            <label for="SmallY"><span class="checkbox-text">Youth Small</span></label>
           </div>
 
           <div>
-            <input type="checkbox" id="Medium" name="Medium" value="MediumY" />
-            <label for="Medium"><span class="checkbox-text">Youth Medium</span></label>
+            <input type="checkbox" id="MediumY" name="Medium" value="MediumY">
+            <label for="MediumY"><span class="checkbox-text">Youth Medium</span></label>
           </div>
 
           <div>
-            <input type="checkbox" id="Large" name="Large" value="LargeY" />
-            <label for="Large"><span class="checkbox-text">Youth Large</span></label>
+            <input type="checkbox" id="LargeY" name="Large" value="LargeY">
+            <label for="LargeY"><span class="checkbox-text">Youth Large</span></label>
           </div>
           <div>
-            <input type="checkbox" id="Small" name="Small" value="Small" />
+            <input type="checkbox" id="Small" name="Small" value="Small">
             <label for="Small"><span class="checkbox-text">Small</span></label>
           </div>
         </div>
 
         <div class="column">
           <div>
-            <input type="checkbox" id="Medium" name="Medium" value="Medium" />
+            <input type="checkbox" id="Medium" name="Medium" value="Medium">
             <label for="Medium"><span class="checkbox-text">Medium</span></label>
           </div>
           <div>
-            <input type="checkbox" id="Large" name="Large" value="Large" />
+            <input type="checkbox" id="Large" name="Large" value="Large">
             <label for="Large"><span class="checkbox-text">Large</span></label>
           </div>
           <div>
-            <input type="checkbox" id="Extra" name="Extra" value="Extra" />
+            <input type="checkbox" id="Extra" name="Extra" value="Extra">
             <label for="Extra"><span class="checkbox-text">Extra-Large</span></label>
           </div>
         </div>
@@ -208,12 +208,12 @@
 
         <div class="street-container">
           <label for="street-address">Parent/Guardian Signature: </label>
-          <input type="text" id="signature" name="street-address" required />
+          <input type="text" id="signature" name="street-address" required>
         </div>
 
         <div class="date-signature">
           <label for="date-sig">Date:</label>
-          <input type="date" id="date-sig" name="date-sig" required />
+          <input type="date" id="date-sig" name="date-sig" required>
         </div>
         
       <input type="submit" class="botonForm">
